@@ -38,7 +38,7 @@
  *
  *      %W% (Berkeley) %G%
  *
- * $Id: xutil.c,v 1.15 2000/11/22 10:13:13 ezk Exp $
+ * $Id: xutil.c,v 1.16 2000/11/24 21:31:32 ezk Exp $
  *
  */
 
@@ -293,6 +293,12 @@ static const char *
 expand_error(const char *f, char *e, int maxlen)
 {
 #ifndef HAVE_STRERROR
+  /*
+   * XXX: we are assuming that if a system doesn't has strerror,
+   * then it has sys_nerr.  If this assumption turns out to be wrong on
+   * some systems, we'll have to write a separate test to detect if
+   * a system has sys_nerr.  -Erez
+   */
   extern int sys_nerr;
 #endif /* not HAVE_STRERROR */
   const char *p;
@@ -470,7 +476,7 @@ real_plog(int lvl, const char *fmt, va_list vargs)
    * more than 1024 bytes, if efmt is already large, and vargs expand
    * as well.  This is not as safe as using vsnprintf().
    */
-  vsprintf(ptr, expand_error(fmt, efmt, 1024), vargs);
+  vsprintf(ptr, expand_error(fmt, efmt, 1023), vargs);
   msg[1023] = '\0';		/* null terminate, to be sure */
 #endif /* not HAVE_VSNPRINTF */
 
